--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <body>
         <h1>HELLO WORLD !</h1>
             <hr />
+            <hr />
+            <hr />
             <h2>
                 <img src="./assets/images/cat.png" width="150" alt="My Photo">
                 <p>My Name Is Fajar Kemal<br>
                     Nice To Meet You !</p>
             </h2>
+            <hr />
             <hr />
             <h3>Summary :</h3>
             <p>I'm a person who want to growing my knowledge about computer. so, first <br>
@@ -21,5 +24,36 @@
             <p><ul>
                 <li>Senior Highschool 4 South Tambun, Social (since 2014 - 2017).</li>
             </ul></p>
+            <hr />
+            <h3>Work Experience :</h3>
+            <p><ol>
+                <li>PT. ASEM JAWA, SINCE 1955 - 1966</li>
+                <li>PT. Dodol Garut, Since 2001 - 2002</li>
+            </ol></p>
+            <hr />
+            <h3>Skills :</h3>
+            <p><ol>
+                <li>Microsoft Office</li>
+                <li>Web Dev</li>
+            </ol></p><hr />
+            <h3>Certification :</h3>
+            <p><ul>
+                <li>tes asem jawa</li>
+                <li>tes dodol</li>
+            </ul></p>
+            <hr />
+            <hr />
+            <h3>
+                <a href="./public/Contact Me.html">Contact</a>
+                <a href="./public/hobbies.html">Hobbies</a>
+            </h3>
+            <hr />
+            <hr />
+            <hr />
+            <footer>
+                <small>
+                <p>Since 27 February 2025</p>
+            </small>
+            </footer>
     </body>
 </html>
