--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse " id="navbarContent">
               <a href="#" class="navbar-brand text-light ">
                 <img src="./assets/images/programming-2115930.jpg" alt="profile-image" class="profile-image">
-                Ciola Arjunior
+                Fajar Kemal
               </a>
   
               <ul class="navbar-nav me-auto mb-lg-0">
