--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./stylesheet.css" />
     </head>
     <body>
-      <header>
+      <header class="border-bottom border-warning-subtle">
         <nav class="navbar navbar-expand-md bg-dark">
           <div class="container-fluid">
 
@@ -19,12 +19,12 @@
             <div class="collapse navbar-collapse " id="navbarContent">
               <a href="#" class="navbar-brand text-light ">
                 <img src="./assets/images/programming-2115930.jpg" alt="profile-image" class="profile-image">
-                Fajar Kemal
+                Your Name
               </a>
   
               <ul class="navbar-nav me-auto mb-lg-0">
                 <li class="nav-item">
-                  <a href="#" class="text-white nav-link active" aria-current="page">Home</a>
+                  <a href="https://mirhop.github.io/my-portofolio/" class="text-white nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                   <a href="#" class="text-white nav-link">Project</a>
@@ -63,6 +63,16 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="footer bg-black bg-gradient border-top border-warning-subtle">
+        <footer class="pt-2">
+          <p class="text-center text-white">Contact Me.</p>
+          <ul class="nav justify-content-center border-bottom">
+            <li class="nav-item"><a href="https://www.facebook.com/fajar.kemal.3/" class="nav-link px-2 text-body-secondary"><img src="./assets/images/icons8-facebook.svg" alt="Facebook Logo" class="logo-footer"><span class="text-white">Facebook</span></a></li>
+            <li class="nav-item"><a href="https://www.instagram.com/arjunior31?igsh=MTMzMmRtZ3c0M25paw==" class="nav-link px-2 text-body-secondary"><img src="./assets/images/icons8-instagram.svg" alt="Instagram Logo" class="logo-footer"><span class="text-white">Instagram</span></a></li>
+          </ul>
+        </footer>
       </section>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
