--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </button> 
             
             <div class="collapse navbar-collapse " id="navbarContent">
-              <a href="#" class="navbar-brand text-light ">
+              <a href="https://mirhop.github.io/my-portofolio/" class="navbar-brand text-light ">
                 <img src="./assets/images/programming-2115930.jpg" alt="profile-image" class="profile-image">
                 Your Name
               </a>
@@ -37,7 +37,7 @@
                     About Me
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a href="#" class="dropdown-item">My Profile</a></li>
+                    <li><a href="./myprofile.html" class="dropdown-item">My Profile</a></li>
                     <li><a href="#" class="dropdown-item">Skill</a></li>
                   </ul>
                 </li>
