--- a/myprofile.html
+++ b/myprofile.html
@@ -17,14 +17,14 @@
                 </button> 
                 
                 <div class="collapse navbar-collapse " id="navbarContent">
-                  <a href="#" class="navbar-brand text-light ">
+                  <a href="./index.html" class="navbar-brand text-light ">
                     <img src="./assets/images/programming-2115930.jpg" alt="profile-image" class="profile-image">
                     Ciola Arjunior
                   </a>
       
                   <ul class="navbar-nav me-auto mb-lg-0">
                     <li class="nav-item">
-                      <a href="https://mirhop.github.io/my-portofolio/" class="text-white nav-link active" aria-current="page">Home</a>
+                      <a href="./index.html" class="text-white nav-link active" aria-current="page">Home</a>
                     </li>
                     <li class="nav-item">
                       <a href="#" class="text-white nav-link">Project</a>
