--- a/index.html
+++ b/index.html
@@ -1,82 +1,95 @@
+
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Resume</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-        <link rel="stylesheet" href="./stylesheet.css" />
-    </head>
-    <body>
-      <header class="border-bottom border-warning-subtle">
-        <nav class="navbar navbar-expand-md bg-dark">
-          <div class="container-fluid">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dynamic Floating Background</title>
 
-            <button class="navbar-toggler bg-white mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon bg-white"></span>
-            </button> 
-            
-            <div class="collapse navbar-collapse " id="navbarContent">
-              <a href="https://mirhop.github.io/my-portofolio/" class="navbar-brand text-light ">
-                <img src="./assets/images/programming-2115930.jpg" alt="profile-image" class="profile-image">
-                Your Name
-              </a>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5/dist/full.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+  <style>
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+    .animate-float {
+      animation: float 6s ease-in-out infinite;
+      will-change: transform;
+    }
+
+    @keyframes borderPulse {
+  0%, 100% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+    border-width: 4px;
+  }
+  50% {
+    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5);
+    border-width: 6px;
+  }
+}
+
+.animate-border-pulse {
+  animation: borderPulse 2s ease-in-out infinite;
+}
+  </style>
   
-              <ul class="navbar-nav me-auto mb-lg-0">
-                <li class="nav-item">
-                  <a href="https://mirhop.github.io/my-portofolio/" class="text-white nav-link active" aria-current="page">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="text-white nav-link">Project</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#" class="text-white nav-link">Contact Me</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="#" class="text-white nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    About Me
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a href="./myprofile.html" class="dropdown-item">My Profile</a></li>
-                    <li><a href="#" class="dropdown-item">Skill</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
+</head>
+<body class="bg-gradient-to-tl from-indigo-500 via-sky-500 to-sky-400 min-h-screen flex items-center justify-center">
 
-      <section class="bg-image">
-        <div class="container col-xxl-8 px-4 py-5">
-          <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-            <div class="col-10 col-sm-8 col-lg-6">
-              <img src="./assets/images/laptop-2557468.jpg" class="d-block mx-lg-auto img-fluid rounded-circle border border-warning" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-            </div>
-            <div class="col-lg-6">
-              <h1 class="display-5 fw-bold text-warning lh-1 mb-3"><span class="text-light"> I'm a </span>
-                <br> FULL STACK DEVELOPER.</h1>
-              <p class="lead text-light text"><em>"Surely with that hardship comes more ease."
-                <br>Because, "Allah does not require of any soul more than what it can afford."
-                <br> "So once you have fulfilled your duty, strive in devotion,
-                turning to your Lord alone with hope."</em></p>
-            </div>
-          </div>
-        </div>
-      </section>
+  <header class="absolute top-0 left-0 w-full flex justify-between items-center px-6 py-4 z-20">
+    <div class="text-white font-bold text-2xl">
+      MyWebsite
+    </div>
 
-      <section class="footer bg-black bg-gradient border-top border-warning-subtle">
-        <footer class="pt-2">
-          <p class="text-center text-white">Contact Me.</p>
-          <ul class="nav justify-content-center border-bottom">
-            <li class="nav-item"><a href="https://www.facebook.com/fajar.kemal.3/" class="nav-link px-2 text-body-secondary"><img src="./assets/images/icons8-facebook.svg" alt="Facebook Logo" class="logo-footer"><span class="text-white">Facebook</span></a></li>
-            <li class="nav-item"><a href="https://www.instagram.com/arjunior31?igsh=MTMzMmRtZ3c0M25paw==" class="nav-link px-2 text-body-secondary"><img src="./assets/images/icons8-instagram.svg" alt="Instagram Logo" class="logo-footer"><span class="text-white">Instagram</span></a></li>
-          </ul>
-        </footer>
-      </section>
+    <div class="avatar">
+      <div class="w-16 h-16 md:w-20 md:h-20 rounded-full overflow-hidden border-4 border-yellow-300 animate-border-pulse">
+        <img src="./assets/grok_image_ccy22p.jpg" alt="Logo" loading="lazy" class="w-full h-full object-cover">
+      </div>
+    </div>
+  </header>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"></script>
-    </body>
+      <svg class="absolute bottom-0 w-full rotate-z-180 -z-20" aria-hidden="true" viewBox="0 0 1440 150" xmlns="http://www.w3.org/2000/svg">
+      <path fill="#4f46e5" d="M0,64L48,80C96,96,192,128,288,133.3C384,139,480,117,576,101.3C672,85,768,75,864,80C960,85,1056,107,1152,117.3C1248,128,1344,128,1392,128L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+    </svg>
+
+  <main class="relative z-30 flex flex-col items-center justify-center text-center text-white px-4">
+    <h1 class="text-4xl md:text-6xl font-bold mb-4 shadow-sky-400 shadow-xl">Welcome to My Portofolio</h1>
+    <p class="text-lg md:text-xl max-w-xl">
+      There's no such thing as failure, until you give up on doing it.
+    </p>
+  </main>
+
+  <nav class="absolute bottom-6 left-1/2 -translate-x-1/2 z-30 flex space-x-6 text-white text-sm md:text-base ">
+    <a href="#about" class="hover:underline">Tentang Saya</a>
+    <a href="#projects" class="hover:underline">Proyek</a>
+    <a href="#contact" class="hover:underline">Kontak</a>
+  </nav>
+
+  <div id="bg-container" class="absolute w-full h-screen overflow-hidden -z-20"></div>
+
+  <script>
+    
+    const shapes = [
+      { size: 'w-120 h-120 rotate-15', color: 'bg-primary/30', ring: 'ring-cyan-300/40', shadow: 'shadow-cyan-500/30', delay: '0s' },
+      { size: 'w-80 h-80 rotate-15', color: 'bg-secondary/30', ring: 'ring-pink-300/40', shadow: 'shadow-pink-500/30', delay: '0.5s' },
+      { size: 'w-40 h-40 rotate-15', color: 'bg-accent/30', ring: 'ring-emerald-300/40', shadow: 'shadow-emerald-500/30', delay: '1s' },
+    ];
+
+    const container = document.getElementById('bg-container');
+
+    shapes.forEach(shape => {
+      const div = document.createElement('div');
+      div.className = `
+        absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2
+        ${shape.size} ${shape.color} rounded-lg ring-1 ${shape.ring}
+        shadow-xl ${shape.shadow} backdrop-blur-sm animate-float
+      `;
+      div.style.animationDelay = shape.delay;
+      container.appendChild(div);
+    });
+  </script>
+
+</body>
 </html>
