--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <nav class="absolute bottom-6 md:bottom-8 left-1/2 transform -translate-x-1/2 z-30 transition-all duration-1000 delay-1000 loading-fade-up">
         <div class="flex space-x-6 md:space-x-8 text-white text-sm md:text-base backdrop-blur-md bg-white/10 px-6 py-3 rounded-full border border-white/20 shadow-2xl">
             <a 
-                href="./assets/about-me/index.html" 
+                href="./public/about-me/index.html" 
                 class="hover:text-cyan-400 transition-colors duration-300 relative group font-medium nav-link"
             >
                 Tentang Saya
